--- a/homework1/src/app.module.css
+++ b/homework1/src/app.module.css
@@ -1,14 +1,17 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
-.app{
-    background-color: darkturquoise;
-    height: 20px;
-    padding: 10px;
-    margin: 0px;
+.app {
+  background-color: darkturquoise;
+  height: 20px;
+  padding: 10px;
+  margin: 0px;
 }
-.message{
-    background-color: yellow;
-    margin: 0;
-    height: 20px;
+.message {
+  background-color: yellow;
+  margin: 0;
+  height: 20px;
+}
+.buttonMessage{
+  margin: 5px;
 }
