--- a/homework1/src/app.module.css
+++ b/homework1/src/app.module.css
@@ -1,17 +1,21 @@
 body {
-  margin: 0;
+    margin: 0;
 }
+
 .app {
-  background-color: darkturquoise;
-  height: 20px;
-  padding: 10px;
-  margin: 0px;
+    margin: 0;
+    padding-left: 0;
+    padding-bottom: 0;
+    min-height: 440px;
+    height: 100%;
+
 }
+
 .message {
-  background-color: yellow;
-  margin: 0;
-  height: 20px;
+    background-color: yellow;
+
 }
-.buttonMessage{
-  margin: 5px;
+
+.buttonMessage {
+    margin: 5px;
 }
