--- a/homework1/src/components/message-list/messageList.module.css
+++ b/homework1/src/components/message-list/messageList.module.css
@@ -1,56 +1,59 @@
-.messageList{
-    color: red;
-    border-left: 0;
-    padding-left: 4px;
-    padding-bottom: 4px ;
-    padding-right: 4px;
-    box-sizing: border-box;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+.messageList {
+  color: red;
+  border-left: 0;
+  padding-left: 4px;
+  padding-bottom: 4px;
+  padding-right: 4px;
+  box-sizing: border-box;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
-.title{
-    color: black;
-    text-align: center;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-
-.text{
-    color: black;
-    display: block;
-    justify-self: flex-end;
+.title {
+  color: black;
+  text-align: center;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-.blockMessage{
-    box-sizing: border-box;
-    max-width: 50%;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: #b2dfee;
-    color: black;
-    display: flex;
-    flex-direction: column;
+.text {
+  color: black;
+  display: block;
+  justify-self: flex-end;
 }
 
+.blockMessage {
+  box-sizing: border-box;
+  max-width: 50%;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #b2dfee;
+  color: black;
+  display: flex;
+  flex-direction: column;
+}
+.blockMessageBot {
+  background-color: rgba(0, 0, 0, 0.08);
+  margin: 0 0 10px auto;
+}
 .chat {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    min-height: 870px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-height: 94vh;
 }
 
-.message{
-    color: black;
+.message {
+  color: black;
 }
 
-.userName{
-    font-weight: bold;
-    color: black;
+.userName {
+  font-weight: bold;
+  color: black;
 }
 
-.date{
-    text-align: end;
-    font-size: 10px;
+.date {
+  text-align: end;
+  font-size: 10px;
 }
 
-.textMessage{
-    margin: 0;
+.textMessage {
+  margin: 0;
 }
