--- a/homework1/src/components/message-list/messageList.module.css
+++ b/homework1/src/components/message-list/messageList.module.css
@@ -1,11 +1,12 @@
 .messageList {
-  color: red;
+  color: #1dacd6;
   border-left: 0;
   padding-left: 4px;
   padding-bottom: 4px;
   padding-right: 4px;
   box-sizing: border-box;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  margin: auto;
 }
 .title {
   color: black;
@@ -37,7 +38,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  min-height: 94vh;
+  min-height: 93vh;
 }
 
 .message {
@@ -52,6 +53,7 @@
 .date {
   text-align: end;
   font-size: 10px;
+  margin: 0;
 }
 
 .textMessage {
