Домашнее задание 5: создана тема, создан личный кабинет, который считывает данные из состояния. Созданы инпуты на случай "редактирования", но пока не изменяется состояние

--- a/homework1/src/components/chat-list/chatList.module.css
+++ b/homework1/src/components/chat-list/chatList.module.css
@@ -44,7 +44,9 @@
   flex-direction: column;
   border-radius: 10px;
 }
-
+.listItemLink div:hover {
+  background-color: #6c757d;
+}
 .chatName span {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   color: white;
