Домашнее задание 7: - сделан ответ бота через middleware и redux-thunk - с помощью redux-persist теперь сохраняются необходимые данные - добавлена возможность удаления беседы(диалога), изменения названия беседы, изменение сообщения

--- a/homework1/src/components/chat-list/chatList.module.css
+++ b/homework1/src/components/chat-list/chatList.module.css
@@ -44,9 +44,9 @@
   flex-direction: column;
   border-radius: 10px;
 }
-.listItemLink div:hover {
-  background-color: #6c757d;
-}
+/*.listItemLink div:hover {*/
+/*  background-color: #6c757d;*/
+/*}*/
 .chatName span {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   color: white;
@@ -78,3 +78,40 @@
   color: #007cad;
 }
 
+.iconDelete{
+  text-align: end;
+  display: block;
+  color: #b2dfee;
+  font-size: 15px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 5px;
+}
+
+.iconDelete:hover{
+  color: white;
+}
+
+.iconDelete:active{
+  color: #b2dfee;
+}
+
+.iconEdit{
+  text-align: end;
+  display: block;
+  color: #b2dfee;
+  font-size: 15px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  left: 5px;
+}
+
+.iconEdit:hover{
+  color: white;
+}
+
+.iconEdit:active{
+  color: #b2dfee;
+}
