Домашнее задание 8: запросы на animegists сделан с помощью async await, а запросы на gists в api github и поиск внутри - через отдельный класс request

--- a/homework1/src/components/header/header.module.css
+++ b/homework1/src/components/header/header.module.css
@@ -23,7 +23,7 @@
 .btnToCab {
   display: block;
   font-family: "Roboto";
-  margin: 8px 8px 0 0;
+  margin: 8px 8px 0 8px;
   border: none;
   width: 180px;
   padding: 10px;
