Добавлена аутентификация через firebase(email/password), добавлена отправка сообщений,и очистка инпута после отправки, хранение, получение сообщений и чатов, изменение значения поля ввода сообщения через Realtime Database

--- a/homework1/src/components/chat-list/chatList.module.css
+++ b/homework1/src/components/chat-list/chatList.module.css
@@ -115,3 +115,10 @@
 .iconEdit:active{
   color: #b2dfee;
 }
+
+.spinner{
+  color:#007cad;
+  margin: 10px 64px;
+  display: flex;
+  justify-content: center;
+}
